# CS4451

./: .gitignore  README.md  dataloader.py  hyperparam_search.sh  interpret_model.py  losses.py  main.py  model.py  pyproject.toml  test_dataloader.py  train.py
models/: TSMixer.py  __init__.py
models/iTransformer/: Embed.py  SelfAttention_Family.py  Transformer_EncDec.py  masking.py  model.py
testing/: synthetic_fredf_training.py  test_tsmixer_integration.py  test_tsmixer_unit.py
trains/: dummyitransformers.py  exampleitransformer.py  itransformer.py  train.py
utils/: dataloader.py  fft-layer.py  fftlayer.py  interpret.py  inverse-fft.py  losses.py  test_dataloader.py
