[project]
name = "fredf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "polars>=1.35.2",
    "reformer-pytorch>=1.4.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
]
